--- a/trunk/package/analogues/NEWS
+++ b/trunk/package/analogues/NEWS
@@ -31,3 +31,7 @@ Version 0.0.12 (Mon Aug  29 17:31:00 EDT 2011)
 --------------------------------------------
 * JRV: Added user-input error verification in some functions, namely createParameters(), dissimilarity(), loadDataPoints(), loadWeightsPoints(), ccafsMPoints(), applyThreshold().
 * JRV: Fixed errors documentation: report.Rd and createParameters.Rd
+
+Version 0.0.13 (Mon Aug  31 22:46:00 EDT 2011)
+--------------------------------------------
+* JRV: Fixed z parameter consistence verification in createParameters()
