--- a/wiki/EffectsLocation.wiki
+++ b/wiki/EffectsLocation.wiki
@@ -44,8 +44,8 @@ params.him <- createParameters(x=87.224,
                                normalise=F,
                                keep.lag=F)
 
-training <- loadData(params)
-weights <- loadWeights(params)
+training <- loadData(params.him)
+weights <- loadWeights(params.him)
 }}}
 
 Note that the name of the usual `params` object was changed by `params.him`; this was done to differentiate the Himalayas run from the Amazon run. Now we will perform the `dissimilarity()` function, plot and save our resultant raster using this configuration,
@@ -53,6 +53,7 @@ Note that the name of the usual `params` object was changed by `params.him`; thi
 {{{
 him <- dissimilarity(params.him,training,weights)
 plot(him[[1]],col=rainbow(20),horizontal=T)
+points(params.him$x,params.him$y)
 writeRaster(him[[1]],
            "C:/analogues/results/3.5.ccafs.himalaya.asc",
            format='ascii')
@@ -76,6 +77,7 @@ And now we will perform the `dissimilarity()` function, store the results and pl
 {{{
 ama <- dissimilarity(params.ama,training,weights)
 plot(ama[[1]],col=rainbow(20),horizontal=T)
+points(params.ama$x,params.ama$y)
 writeRaster(ama[[1]],
            "C:/analogues/results/3.5.ccafs.amazon.asc",
            format='ascii')
@@ -111,15 +113,16 @@ params.him <- createParameters(x=87.224,
                                normalise=F,
                                keep.lag=F)
 
-training <- loadData(params)
-weights <- loadWeights(params)
+training <- loadData(params.him)
+weights <- loadWeights(params.him)
 }}}
 
 Now we run the `dissimilarity()` function, store and plot the results,
 
 {{{
 him <- dissimilarity(params.him,training,weights)
-plot(him[[1]],col=rainbow(20),horizontal=T)
+plot(him[[1]],horizontal=T)
+points(params.him$x,params.him$y)
 writeRaster(him[[1]],
            "C:/analogues/results/3.5.hallegatte.himalaya.asc",
            format='ascii')
@@ -138,6 +141,7 @@ Now we run the `dissimilarity()` function with this configuration, plot the resu
 {{{
 ama <- dissimilarity(params.ama,training,weights)
 plot(ama[[1]])
+points(params.ama$x,params.ama$y)
 writeRaster(ama[[1]],
             "C:/analogues/results/3.5.hallegatte.amazon.asc",
 			format='ascii')
