--- a/package/analogues/NEWS
+++ b/package/analogues/NEWS
@@ -35,3 +35,8 @@ Version 0.0.12 (Mon Aug  29 17:31:00 EDT 2011)
 Version 0.0.13 (Mon Aug  31 22:46:00 EDT 2011)
 --------------------------------------------
 * JRV: Fixed z parameter consistence verification in createParameters()
+
+Version 0.0.13 (Thu Apr  19 10:38:00 EDT 2012)
+--------------------------------------------
+* DA: Removed dependency to rimage
+* DA: Fixed bug in dissimilarityPoints() (growing season when not using monthly data)
